--- a/AsylumSocket/data/upload.html
+++ b/AsylumSocket/data/upload.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
@@ -62,7 +62,7 @@
     <h1 id="header-device-name"></h1>
     <h2>Обновление ПО устройства</h2>
   </header>
-  <form method="POST" action="/upload" enctype="multipart/form-data">
+  <form method="POST" action="/update" enctype="multipart/form-data">
     <h3>Укажите файл для загрузки</h3>
     <div>
       <input id="file_input" type="file" name="update">
