added progmem upload

--- a/AsylumSocket/data/setup.html
+++ b/AsylumSocket/data/setup.html
@@ -37,7 +37,7 @@
     }
 
     a {
-      font-size: 0.6rem;
+      font-size: 0.8rem;
       color: black;
       text-align:right;
       text-decoration:none;
@@ -169,7 +169,7 @@
 </head>
 
 <body>
-    <a href="/upload.html">обновление ПО</a>
+    <a href="/upload">обновление ПО</a>
     <header>
         <h1 id="uid"></h1>
         <h2>Первоначальная настройка устройства</h2>
