--- a/AsylumSocket/data/setup.html
+++ b/AsylumSocket/data/setup.html
@@ -10,12 +10,13 @@
     /* TODO disabled input style */
 
     body {
-      padding: 30px;
-      background: #eee;
+      padding: 24px;
+      background:white;
     }
 
     header {
-      margin-bottom: 5rem;
+      padding: 12px;
+      margin-bottom: 30px;
     }
     /*/////////////// FONT STYLES ////////////////////*/
 
@@ -25,7 +26,7 @@
 
     body,
     textarea {
-      font-family: 'Arial, Helvetica, sans-serif';
+      font-family: 'Verdana, Geneva, sans-serif';
     }
 
     h1 {
@@ -36,16 +37,14 @@
       font-size: 1.6rem;
     }
 
-    a {
-      font-size: 0.8rem;
-      color: black;
-      text-align:right;
-      text-decoration:none;
-      float:right;
-    }
-
     form {
+      background-color: #fff;
+      border-radius: 7px;
+      border: 1px solid #c1c1c1;
+      background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#f3f3f3));
+      background: -moz-linear-gradient(top, #fff, #f3f3f3);
       font-size: 1.4rem;
+      padding: 12px;
       color: #222;
     }
     /*/////////////// FORM STYLES ////////////////////*/
@@ -59,11 +58,40 @@
       flex: 1;
       text-align: right;
       margin: 0 8px 0 0;
-      padding: 2px 0;
+      padding: 4px 4px;
+    }
+
+    form .field-group .upload {
+      flex: 1;
+      text-align: right;
+      font-size: 1rem;
+      color: black;
+      float: right;
+      text-decoration: none;
+      padding: 4px 4px;
+
     }
 
     form .field-group .field {
       flex: 3;
+    }
+
+    form .field-group .field .field_absolute_wrapper {
+      width: 50%;
+      position: relative;
+      box-sizing: border-box;
+      padding-right: 21px;
+    }
+
+    form .field-group .field .field_absolute_wrapper .field_absolute_back {
+      width: 100%;
+      position: absolute;
+    }
+
+    form .field-group .field .field_absolute_wrapper .field_absolute_front {
+      width: 100%;
+      position: relative;
+      z-index: 100;
     }
 
     form .field-group:last-child {
@@ -78,11 +106,16 @@
     input,
     select,
     textarea {
-      padding: .6rem 1rem;
+      padding: 4px 4px;
       font-size: 1.6rem;
       border: solid 1px #eee;
       background: #fff;
       box-sizing: border-box;
+    }
+
+    select{
+      border: solid 1px #c1c1c1;
+      height: 30px;
     }
 
     input:disabled {
@@ -94,9 +127,10 @@
     }
 
     input:valid {
-      border: 1px solid green;
+      border: 1px solid #c1c1c1;
     }
 
+    select:focus,
     input:focus {
       outline: none;
     }
@@ -108,6 +142,10 @@
     input,
     select {
       width: 50%;
+    }
+
+    input[type="text"] {
+      height: 30px;
     }
 
     input[type="radio"],
@@ -143,6 +181,9 @@
       select {
         width: 85%;
       }
+      form .field-group .field .field_absolute_wrapper {
+        width: 85%;
+      }
     }
 
     @media (max-width: 480px) {
@@ -164,22 +205,24 @@
         padding: 0 0 5px 0;
         margin: 10px 0 0 0;
       }
+      form .field-group .field .field_absolute_wrapper {
+        width: 100%;
+      }
     }
   </style>
 </head>
 
 <body>
-    <a href="/upload">обновление ПО</a>
     <header>
         <h1 id="uid"></h1>
-        <h2>Первоначальная настройка устройства</h2>
     </header>
     <div id="loading-placeholer">Загрузка...</div>
     <form id="mainForm" style="display: none;" action="/submit" method="POST" onsubmit="submitForm(this);">
+        <div class="field-group"><a class="upload" href="/upload">Обновление ПО</a></div>
         <div class="field-group">
             <label for="description" class="label">Описание:</label>
             <div class="field">
-                <input id="description" type="text" name="description" maxlength="128" placeholder="Люстра в гостинной" maxlength="64" autofocus />
+                <input id="description" type="text" name="description" maxlength="128" placeholder="Люстра в гостиной" maxlength="64" autofocus />
             </div>
         </div>
         <div class="field-group">
@@ -206,7 +249,15 @@
         <div class="field-group">
             <label for="apssid" class="label">SSID точки доступа:</label>
             <div class="field">
-                <input id="apssid" type="text" name="apssid" maxlength="32" placeholder="My Wi-Fi" value="" required />
+                <div class="field_absolute_wrapper">
+                    <select class="field_absolute_back" onchange="document.getElementById('apssid').value=this.options[this.selectedIndex].text;">
+                        <option></option>
+                        <option value="one">one</option>
+                        <option value="two">two</option>
+                        <option value="three">three</option>
+                    </select>
+                    <input class="field_absolute_front" id="apssid" type="text" name="apssid" maxlength="32" placeholder="Мой Wi-Fi" value="" onfocus="this.select()" required/>
+                </div>
             </div>
         </div>
         <div class="field-group">
