--- a/AsylumSocket/data/setup.html
+++ b/AsylumSocket/data/setup.html
@@ -4,331 +4,128 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Device config</title>
-  <style>
-    /*/////////////// GLOBAL STYLES ////////////////////*/
-    /* TODO disabled input style */
-
-    body {
-      padding: 24px;
-      background:white;
-    }
-
-    header {
-      padding: 12px;
-      margin-bottom: 30px;
-    }
-    /*/////////////// FONT STYLES ////////////////////*/
-
-    html {
-      font-size: 62.5%;
-    }
-
-    body,
-    textarea {
-      font-family: 'Verdana, Geneva, sans-serif';
-    }
-
-    h1 {
-      font-size: 3rem;
-    }
-
-    h2 {
-      font-size: 1.6rem;
-    }
-
-    form {
-      background-color: #fff;
-      border-radius: 7px;
-      border: 1px solid #c1c1c1;
-      background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#f3f3f3));
-      background: -moz-linear-gradient(top, #fff, #f3f3f3);
-      font-size: 1.4rem;
-      padding: 12px;
-      color: #222;
-    }
-    /*/////////////// FORM STYLES ////////////////////*/
-
-    form .field-group {
-      display: flex;
-      margin: 0 0 12px 0;
-    }
-
-    form .field-group .label {
-      flex: 1;
-      text-align: right;
-      margin: 0 8px 0 0;
-      padding: 4px 4px;
-    }
-
-    form .field-group .upload {
-      flex: 1;
-      text-align: right;
-      font-size: 1rem;
-      color: black;
-      float: right;
-      text-decoration: none;
-      padding: 4px 4px;
-
-    }
-
-    form .field-group .field {
-      flex: 3;
-    }
-
-    form .field-group .field .field_absolute_wrapper {
-      width: 50%;
-      position: relative;
-      box-sizing: border-box;
-      padding-right: 21px;
-    }
-
-    form .field-group .field .field_absolute_wrapper .field_absolute_back {
-      width: 100%;
-      position: absolute;
-    }
-
-    form .field-group .field .field_absolute_wrapper .field_absolute_front {
-      width: 100%;
-      position: relative;
-      z-index: 100;
-    }
-
-    form .field-group:last-child {
-      display: flex;
-      justify-content: flex-end;
-    }
-
-    form .field-group:last-child .field {
-      max-width: 75%;
-    }
-
-    input,
-    select,
-    textarea {
-      padding: 4px 4px;
-      font-size: 1.6rem;
-      border: solid 1px #eee;
-      background: #fff;
-      box-sizing: border-box;
-    }
-
-    select{
-      border: solid 1px #c1c1c1;
-      height: 30px;
-    }
-
-    input:disabled {
-      background: #eee;
-    }
-
-    input:invalid {
-      border: 1px solid red;
-    }
-
-    input:valid {
-      border: 1px solid #c1c1c1;
-    }
-
-    select:focus,
-    input:focus {
-      outline: none;
-    }
-
-    textarea {
-      width: 100%;
-    }
-
-    input,
-    select {
-      width: 50%;
-    }
-
-    input[type="text"] {
-      height: 30px;
-    }
-
-    input[type="radio"],
-    input[type="checkbox"],
-    input[type="submit"] {
-      width: auto;
-    }
-
-    [type="checkbox"] {
-      vertical-align: middle;
-    }
-
-    .flexy {
-      display: flex;
-      flex-direction: row;
-    }
-
-    .flexy .testbutton {
-      width: 100px;
-    }
-
-    .flexy .first {
-      width: 130px;
-    }
-    /*/////////////// RWD STYLES ////////////////////*/
-
-    @media (max-width: 720px) {
-      form .field-group .label {
-        text-align: left;
-        margin: 0;
-      }
-      input,
-      select {
-        width: 85%;
-      }
-      form .field-group .field .field_absolute_wrapper {
-        width: 85%;
-      }
-    }
-
-    @media (max-width: 480px) {
-      input,
-      select {
-        width: 100%;
-      }
-      input[type="radio"],
-      input[type="checkbox"],
-      input[type="submit"] {
-        width: auto;
-      }
-      form .field-group {
-        display: flex;
-        flex-direction: column;
-        margin: 0 0 6px 0;
-      }
-      form .field-group .label {
-        padding: 0 0 5px 0;
-        margin: 10px 0 0 0;
-      }
-      form .field-group .field .field_absolute_wrapper {
-        width: 100%;
-      }
-    }
-  </style>
+  <title>Настройка устройства</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <header>
-        <h1 id="uid"></h1>
-    </header>
-    <div id="loading-placeholer">Загрузка...</div>
-    <form id="mainForm" style="display: none;" action="/submit" method="POST" onsubmit="submitForm(this);">
-        <div class="field-group"><a class="upload" href="/upload">Обновление ПО</a></div>
-        <div class="field-group">
-            <label for="description" class="label">Описание:</label>
-            <div class="field">
-                <input id="description" type="text" name="description" maxlength="128" placeholder="Люстра в гостиной" maxlength="64" autofocus />
-            </div>
-        </div>
-        <div class="field-group">
-            <div class="label">Режим работы устройства:</div>
-            <div class="field" onchange="changeMode(event);">
-                <div>
-                    <label>
-                        <input id="mode1" name="mode" type="radio" value="1" checked="checked" />Автономно
-                    </label>
-                </div>
-                <div>
-                    <label>
-                        <input id="mode2" name="mode" type="radio" value="2">В локальной сети
-                    </label>
-                </div>
-                <div>
-                    <label>
-                        <input id="mode3" name="mode" type="radio" value="3">С сервером MQTT
-                    </label>
+    <div class="wrapper_full">
+        <header>
+            <h1 id="uid"></h1>
+        </header>
+        <div id="loading-placeholer">Загрузка...</div>
+        <form id="mainForm" style="display: none;" action="/submit" method="POST" onsubmit="submitForm(this);">
+            <div class="field-group"><a class="upload" href="/upload">Обновление ПО</a></div>
+            <div class="field-group">
+                <label for="description" class="label">Описание:</label>
+                <div class="field">
+                    <input id="description" type="text" name="description" maxlength="128" placeholder="Люстра в гостиной" maxlength="64" autofocus />
                 </div>
             </div>
-        </div>
-        <h3>Беспроводная сеть</h3>
-        <div class="field-group">
-            <label for="apssid" class="label">SSID точки доступа:</label>
-            <div class="field">
-                <div class="field_absolute_wrapper">
-                    <select class="field_absolute_back" id="networks" onchange="document.getElementById('apssid').value=this.options[this.selectedIndex].value;">
-                        <option></option>
-                    </select>
-                    <input class="field_absolute_front" id="apssid" type="text" name="apssid" maxlength="32" placeholder="Мой Wi-Fi" value="" onfocus="this.select()" required/>
+            <div class="field-group">
+                <div class="label">Режим работы устройства:</div>
+                <div class="field" onchange="changeMode(event);">
+                    <div>
+                        <label>
+                            <input id="mode1" name="mode" type="radio" value="1" checked="checked" />Автономно
+                        </label>
+                    </div>
+                    <div>
+                        <label>
+                            <input id="mode2" name="mode" type="radio" value="2">В локальной сети
+                        </label>
+                    </div>
+                    <div>
+                        <label>
+                            <input id="mode3" name="mode" type="radio" value="3">С сервером MQTT
+                        </label>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="field-group">
-            <label for="apkey" class="label">Пароль:</label>
-            <div class="field">
-                <input id="apkey" type="password" name="apkey" maxlength="32" value="" />
-            </div>
-        </div>
-        <h3>Авторизация на устройстве</h3>
-        <div class="field-group">
-            <label for="locallogin" class="label">Имя пользователя:</label>
-            <div class="field">
-                <input id="locallogin" type="text" name="locallogin" maxlength="32" placeholder="admin" value="" />
-            </div>
-        </div>
-        <div class="field-group">
-            <label for="localpassword" class="label">Пароль:</label>
-            <div class="field">
-                <input id="localpassword" type="password" name="localpassword" maxlength="32" value="" />
-            </div>
-        </div>
-        <h3>MQTT-сервер</h3>
-        <div class="field-group">
-            <label for="mqttserver" class="label">Адрес сервера:</label>
-            <div class="field">
-                <input id="mqttserver" type="text" name="mqttserver" maxlength="64" placeholder="192.168.1.123" value="" disabled="true" required/>
-            </div>
-        </div>
-        <div class="field-group">
-            <label for="mqttlogin" class="label">Имя пользователя:</label>
-            <div class="field">
-                <input id="mqttlogin" type="text" name="mqttlogin" maxlength="32" placeholder="vasya" value="" disabled="true" />
-            </div>
-        </div>
-        <div class="field-group">
-            <label for="mqttpassword" class="label">Пароль:</label>
-            <div class="field">
-                <input id="mqttpassword" type="password" name="mqttpassword" maxlength="32" disabled="true" />
-            </div>
-        </div>
-        <h3>Дополнительные параметры</h3>
-        <div class="field-group">
-            <label for="extension1" class="label">Параметр 1:</label>
-            <div class="field">
-                <div class="first">
-                    <input id="extension1" type="text" name="extension1" maxlength="32" value=""/>
+            <h3>Беспроводная сеть</h3>
+            <div class="field-group">
+                <label for="apssid" class="label">SSID точки доступа:</label>
+                <div class="field">
+                    <div class="field_absolute_wrapper">
+                        <select class="field_absolute_back" id="networks" onchange="document.getElementById('apssid').value=this.options[this.selectedIndex].value;">
+                            <option></option>
+                        </select>
+                        <input class="field_absolute_front" id="apssid" type="text" name="apssid" maxlength="32" placeholder="Мой Wi-Fi" value="" onfocus="this.select()" required/>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="field-group">
-            <label for="extension2" class="label">Параметр 2:</label>
-            <div class="field">
-                <div class="first">
-                    <input id="extension2" type="text" name="extension2" maxlength="32" value=""/>
+            <div class="field-group">
+                <label for="apkey" class="label">Пароль:</label>
+                <div class="field">
+                    <input id="apkey" type="password" name="apkey" maxlength="32" value="" />
                 </div>
             </div>
-        </div>
-        <div class="field-group">
-            <label for="extension3" class="label">Параметр 3:</label>
-            <div class="field">
-                <div class="first">
-                    <input id="extension3" type="text" name="extension3" maxlength="32" value=""/>
+            <h3>Авторизация на устройстве</h3>
+            <div class="field-group">
+                <label for="locallogin" class="label">Имя пользователя:</label>
+                <div class="field">
+                    <input id="locallogin" type="text" name="locallogin" maxlength="32" placeholder="admin" value="" />
                 </div>
             </div>
-        </div>
-        <div class="field-group">
-            <div class="label"></div>
-            <div class="field">
-                <input id="saveForm" type="submit" name="saveForm" value="Сохранить и применить">
+            <div class="field-group">
+                <label for="localpassword" class="label">Пароль:</label>
+                <div class="field">
+                    <input id="localpassword" type="password" name="localpassword" maxlength="32" value="" />
+                </div>
             </div>
-        </div>
+            <h3>MQTT-сервер</h3>
+            <div class="field-group">
+                <label for="mqttserver" class="label">Адрес сервера:</label>
+                <div class="field">
+                    <input id="mqttserver" type="text" name="mqttserver" maxlength="64" placeholder="192.168.1.123" value="" disabled="true" required/>
+                </div>
+            </div>
+            <div class="field-group">
+                <label for="mqttlogin" class="label">Имя пользователя:</label>
+                <div class="field">
+                    <input id="mqttlogin" type="text" name="mqttlogin" maxlength="32" placeholder="vasya" value="" disabled="true" />
+                </div>
+            </div>
+            <div class="field-group">
+                <label for="mqttpassword" class="label">Пароль:</label>
+                <div class="field">
+                    <input id="mqttpassword" type="password" name="mqttpassword" maxlength="32" disabled="true" />
+                </div>
+            </div>
+            <h3>Дополнительные параметры</h3>
+            <div class="field-group">
+                <label for="extension1" class="label">Параметр 1:</label>
+                <div class="field">
+                    <div class="first">
+                        <input id="extension1" type="text" name="extension1" maxlength="32" value=""/>
+                    </div>
+                </div>
+            </div>
+            <div class="field-group">
+                <label for="extension2" class="label">Параметр 2:</label>
+                <div class="field">
+                    <div class="first">
+                        <input id="extension2" type="text" name="extension2" maxlength="32" value=""/>
+                    </div>
+                </div>
+            </div>
+            <div class="field-group">
+                <label for="extension3" class="label">Параметр 3:</label>
+                <div class="field">
+                    <div class="first">
+                        <input id="extension3" type="text" name="extension3" maxlength="32" value=""/>
+                    </div>
+                </div>
+            </div>
+            <div class="field-group">
+                <div class="label"></div>
+                <div class="field">
+                    <input id="saveForm" type="submit" name="saveForm" value="Сохранить и применить">
+                </div>
+            </div>
 
-    </form>
-
+        </form>
+    </div>
     <script>
         // IE 9- polyfill
         (function () {
